package nl.nextiga.inventory.application.ports.input;

import nl.nextiga.inventory.application.ports.output.RouterViewOutputPort;
import nl.nextiga.inventory.application.usecases.RouterViewUseCase;
import nl.nextiga.inventory.domain.Router;

import java.util.List;
import java.util.function.Predicate;

public class RouterViewInputPort implements RouterViewUseCase {

    private RouterViewOutputPort routerListOutputPort;

    public RouterViewInputPort(RouterViewOutputPort routerViewOutputPort) {
        this.routerListOutputPort = routerViewOutputPort;
    }

    @Override
    public List<Router> getRouters(Predicate<Router> filter) {
        var routers = routerListOutputPort.fetchRouters();
        return Router.retrieveRouter(routers, filter);
    }
}
